<resources>
    <string name="app_name">haedab</string>
    <!-- 온보딩 1 -->
    <string name="start">시작하기</string>
    <string name="next">다음</string>
    <!-- 온보딩 2 -->
    <string name="info_first1">다양한 카테고리분류</string>
    <string name="info_first2">코딩, 블로그, 외국어 공부, 콘텐츠 제작, 자기소개서,</string>
    <string name="info_first3">엑셀, 과제, 주식, 기타아이디어, 이메일 중 선택하시면</string>
    <string name="info_first4">더욱 많은 카테고리가 나와요.</string>
    <!-- 온보딩3 -->
    <string name="info_second1">채팅방으로 이동</string>
    <string name="info_second2">카테고리를 클릭하셔서 채팅방에 들어오셨다면</string>
    <string name="info_second3">이제 HaeDab에게 물어보세요.</string>
    <string name="info_second4">그럼 질문에 대한 해답을 제시해드려요.</string>
    <!-- 채팅 -->
    <string name="chatting_edit">여기 입력하세요</string>


    <!--카테고리-->
    <string name="blog">블로그</string>
    <string name="coding">코딩</string>
    <string name="contents">콘텐츠제작</string>
    <string name="email">이메일</string>
    <string name="excel">엑셀</string>
    <string name="foreign">외국어공부</string>
    <string name="idea">기타아이디어</string>
    <string name="idea2">기타아이디어</string>
    <string name="self">자기소개서</string>
    <string name="stock">주식</string>
    <string name="task">과제</string>


    <!--설정-->
    <string name="language">언어설정</string>
    <string name="application">적용하기</string>
    <string name="setting">설정</string>
    <string name="use">사용방법</string>
    <string name="terms">이용약관</string>
    <string name="close">닫기</string>

    <!--블로그-->
    <string name="blog1">키워드</string>
    <string name="blog2">원고작성</string>
    <string name="blog3">트렌드</string>
    <string name="blog4">콘텐츠종류</string>
    <string name="blog5">디지털노마드 되기</string>
    <string name="blog6">네이버블로그</string>
    <string name="blog7">티스토리블로그</string>
    <string name="blog8">블로그체험단</string>
    <string name="blog9">블로그수익</string>
    <string name="blog10">블로그광고</string>

    <!-- 코딩 -->
    <string name="coding1">파이썬</string>
    <string name="coding2">자바</string>
    <string name="coding3">루비</string>
    <string name="coding4">HTML</string>
    <string name="coding5">SQL</string>
    <string name="coding6">C</string>
    <string name="coding7">자바스크립트</string>
    <string name="coding8">C++</string>
    <string name="coding9">XML</string>
    <string name="coding10">JSON</string>
    <string name="coding11">BASH</string>
    <string name="coding12">기타언어</string>

    <!--콘텐츠 -->
    <string name="contents1">마케팅</string>
    <string name="contents2">SNS광고</string>
    <string name="contents3">SNS이벤트</string>
    <string name="contents4">카드뉴스</string>
    <string name="contents5">바이럴</string>
    <string name="contents6">체험단</string>
    <string name="contents7">브랜딩</string>
    <string name="contents8">스크립트</string>

    <!--이메일-->
    <string name="email1">맞춤법 검사</string>
    <string name="email2">외국어 메일 작성</string>
    <string name="email3">업무메일 작성</string>
    <string name="email4">홍보메일 작성</string>

    <!--엑셀-->
    <string name="excel1">엑셀함수</string>
    <string name="excel2">엑셀자격증 준비</string>
    <string name="excel3">엑셀기초</string>
    <string name="excel4">엑셀표/차트</string>
    <string name="excel5">엑셀통계</string>
    <string name="excel6">실무엑셀</string>
    <string name="excel7">오피스꿀팁</string>
    <string name="excel8">PPT</string>


    <!-- 외국어-->
    <string name="foreign1">사전</string>
    <string name="foreign2">발음</string>
    <string name="foreign3">작문</string>
    <string name="foreign4">번역</string>
    <string name="foreign5">문법</string>
    <string name="foreign6">독해</string>

    <!--기타 아이디어-->
    <string name="idea1">소설쓰기</string>
    <string name="idea2_1">트위터 콘텐츠</string>
    <string name="idea3">페이스북 콘텐츠</string>
    <string name="idea4">인스타그램 콘텐츠</string>
    <string name="idea5">해답과 함께 놀기</string>
    <string name="idea6">레시피</string>
    <string name="idea7">여행꿀팁</string>
    <string name="idea8">무엇이든 물어보세요!</string>


    <!--자기소개서-->
    <string name="self1">취업준비</string>
    <string name="self2">자기소개서</string>
    <string name="self3">이력서</string>
    <string name="self4">1분 자기소개</string>
    <string name="self5">먼졉 예상질문</string>
    <string name="self6">영어 자기소개서</string>


    <!-- 주식 -->
    <string name="stock1">ETF</string>
    <string name="stock2">파이어족되기</string>
    <string name="stock3">부동산</string>
    <string name="stock4">예금상품</string>
    <string name="stock5">시황</string>
    <string name="stock6">재태크</string>
    <string name="stock7">펀드</string>
    <string name="stock8">경제트렌드</string>


    <!-- 과제 -->
    <string name="task1">에세이</string>
    <string name="task2">레포트양식</string>
    <string name="task3">보고서</string>
    <string name="task4">논문검색</string>
    <string name="task5">자료조사</string>
    <string name="task6">설문조사</string>
    <string name="task7">통계자료</string>
    <string name="task8">독후감</string>


</resources>