<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/info_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_second1"
            android:textColor="@color/main_purple"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/info_img"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/info2_img"
            android:layout_marginTop="21dp"
            app:layout_constraintTop_toBottomOf="@+id/info_tv1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/info_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_second2"
            android:textSize="13sp"
            android:textColor="@color/main_purple"
            app:layout_constraintTop_toBottomOf="@+id/info_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/info_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_second3"
            android:textSize="13sp"
            android:textColor="@color/main_purple"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/info_tv2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/info_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_second4"
            android:textSize="13sp"
            android:textColor="@color/main_purple"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/info_tv3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/next_btn"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:background="@drawable/purple_next_btn"
            android:elevation="5dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/info_tv4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/next_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>